--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 	<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
 	<script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
 	<![endif]-->
-	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<link href="../Font-Awesome-3.2.1/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="../css/toastr.css">
-	<link rel="stylesheet" href="../css/darktooltip.css">
+	<link rel="stylesheet" href="css/toastr.css">
+	<link rel="stylesheet" href="css/darktooltip.css">
 	<link rel="stylesheet" href="../js/bt-datetimepicker/bootstrap-datetimepicker.min.css">
 	<!--列表查询-->
 	<link rel="stylesheet" href="../js/list/style.css" />
-	<link rel="stylesheet" href="../css/common.css">
+	<link rel="stylesheet" href="css/common.css">
 	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.js"></script>
 </head>
