--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
 	<![endif]-->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link href="../Font-Awesome-3.2.1/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/toastr.css">
 	<link rel="stylesheet" href="css/darktooltip.css">
 	<link rel="stylesheet" href="../js/bt-datetimepicker/bootstrap-datetimepicker.min.css">
