--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/toastr.css">
 	<link rel="stylesheet" href="css/darktooltip.css">
-	<link rel="stylesheet" href="../js/bt-datetimepicker/bootstrap-datetimepicker.min.css">
+	<link rel="stylesheet" href="bt-datetimepicker/bootstrap-datetimepicker.min.css">
 	<!--列表查询-->
 	<link rel="stylesheet" href="../js/list/style.css" />
 	<link rel="stylesheet" href="css/common.css">
