--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/darktooltip.css">
 	<link rel="stylesheet" href="bt-datetimepicker/bootstrap-datetimepicker.min.css">
 	<!--列表查询-->
-	<link rel="stylesheet" href="../js/list/style.css" />
+	<link rel="stylesheet" href="list/style.css" />
 	<link rel="stylesheet" href="css/common.css">
 	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.js"></script>
