--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="list/style.css" />
 	<link rel="stylesheet" href="css/common.css">
 	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
-	<script type="text/javascript" src="../js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 <body>
 <div class="header">
@@ -134,9 +134,9 @@
 	conH.style.height = (bodyH-173)+"px";
 
 </script>
-<script type="text/javascript" src="../js/toastr.js"></script>
-<script type="text/javascript" src="../js/bt-datetimepicker/bootstrap-datetimepicker.js"></script>
-<script type="text/javascript" src="../js/bt-datetimepicker/bootstrap-datetimepicker.zh-CN.js"></script>
+<script type="text/javascript" src="js/toastr.js"></script>
+<script type="text/javascript" src="bt-datetimepicker/bootstrap-datetimepicker.js"></script>
+<script type="text/javascript" src="bt-datetimepicker/bootstrap-datetimepicker.zh-CN.js"></script>
 <script type="text/javascript">
 	$(function() {
 		$('#datatime').datetimepicker({
@@ -156,11 +156,11 @@
 
 </script>
 <!--菊花加载-->
-<script type="text/javascript" src="../js/loading/spin.js"></script>
+<script type="text/javascript" src="loading/spin.js"></script>
 <!--列表查询-->
-<script src="../js/list/list.js"></script>
+<script src="list/list.js"></script>
 <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/list.pagination.js/0.1.1/list.pagination.min.js" />-->
-<script src="../js/list/pagination.js"></script>
+<script src="list/pagination.js"></script>
 <!--滚动加载封装-->
 <!--<script type="text/javascript">-->
 	<!--$(function () {-->
@@ -196,7 +196,7 @@
 <!--</script>-->
 <!--<script src="../js/scrollpagination.js"></script>-->
 <!--自定义-->
-<script type="text/javascript" src="../js/my.js"></script>
+<script type="text/javascript" src="js/my.js"></script>
 <script type="text/javascript">
 	$.fn.fadeInWithDelay = function(){
 		var delay = 0;
