--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<!--列表查询-->
 	<link rel="stylesheet" href="list/style.css" />
 	<link rel="stylesheet" href="css/common.css">
-	<script type="text/javascript" src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
-	<script type="text/javascript" src="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.0/jquery.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
 </head>
 <body>
 <div class="header">
