--- a/1.html
+++ b/1.html
@@ -9,7 +9,8 @@
 	<h2 class="title1 bt">
 		会议记录
 		<a href="#" >
-			<span class="icon icon-plus-sign themeC" data-toggle="modal" data-target="#myModal"></span>
+			<span class="glyphicon glyphicon-plus-sign themeC"></span>
+<!-- 			<span class="icon icon-plus-sign themeC" data-toggle="modal" data-target="#myModal"></span> -->
 		</a>
 	</h2>
 	<!--<div id="spinner">-->
